# tines

./: .gitignore  INSTALL.md  Makefile  Makefile.am  Makefile.in  Makefile.obs  README.legacy  README.md  ROADMAP  VERSION  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
doc/: Documentation.html  README  cli_tokenize.dot  cli_tokenize.ps  hnbrc  hnbrc.inc  (+13 more)
src/: Makefile  Makefile.am  Makefile.in  Makefile.obs  Makefile~  actions.c  autosave.c  cal.c  cli_macro.c  clipboard.c  config.h  evilloop.c  evilloop.h  expanded.c  file.c  file.h  file_ascii.c  file_binary.c  file_copy.c  file_copy.h  file_help.c  file_hnb.c  file_html.c  file_opml.c  file_ps.c  file_xml.c  init_subsystems.c  mark.c  node.c  node.h  path.c  path.h  prefs.c  prefs.h  query.c  query.h  search.c  sigs.c  spell.c  statcmds.c  (+29 more)
src/.deps/: tines-actions.Po  tines-autosave.Po  tines-cal.Po  tines-cli_macro.Po  tines-clipboard.Po  tines-evilloop.Po  tines-expanded.Po  tines-file.Po  tines-file_ascii.Po  tines-file_binary.Po  tines-file_copy.Po  tines-file_help.Po  tines-file_hnb.Po  tines-file_html.Po  tines-file_opml.Po  tines-file_ps.Po  tines-file_xml.Po  tines-init_subsystems.Po  tines-mark.Po  tines-node.Po  tines-path.Po  tines-prefs.Po  tines-query.Po  tines-search.Po  tines-sigs.Po  tines-spell.Po  tines-statcmds.Po  tines-state.Po  tines-tines.Po  tines-tokenizer.Po  tines-tree.Po  tines-tree_misc.Po  tines-tree_sort.Po  tines-tree_todo.Po  tines-ui.Po  tines-ui_binding.Po  tines-ui_cli.Po  tines-ui_draw.Po  tines-ui_edit.Po  tines-ui_menu.Po  (+4 more)
src/libcli/: cli.c  cli.h  cli_history.h  cli_tokenize.c  cli_tokenize.h  test.c
(+30 files in other folders)
