bin_PROGRAMS=tines
tines_SOURCES=actions.c autosave.c cal.c cli_macro.c clipboard.c evilloop.c expanded.c file_ascii.c file_binary.c file.c file_copy.c file_help.c file_hnb.c file_html.c file_opml.c file_ps.c file_xml.c init_subsystems.c mark.c node.c path.c prefs.c query.c search.c sigs.c spell.c statcmds.c state.c tines.c tokenizer.c tree.c tree_misc.c tree_sort.c tree_todo.c ui_binding.c ui.c ui_cli.c ui_draw.c ui_edit.c ui_menu.c ui_overlay.c ui_style.c util_string.c xml_tok.c
tines_CPPFLAGS=-I$(top_srcdir)/include
tines_LDADD=../libcli/libcli.la -lncurses
